Fix some spacing between blog section and badge display section

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -2,6 +2,7 @@
 .blog-section {
   background: darken($grey--body, 10%);
   padding: 40px 0;
+  margin-top: 20px;
 }
 
 .blog-section__title,
