--- a/css/style.scss
+++ b/css/style.scss
@@ -69,7 +69,7 @@ a {
 }
 
 .see-more-button {
-    margin: 10px 5px 30px;
+    margin: 10px 5px;
     padding: 20px 0;
     width: 100%;
 }
